--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,16 +23,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.21.0+1
   gap: ^1.2.0
-  provider: ^4.3.2+2
   get_it: ^4.0.1
-  percent_indicator: "^2.1.7+2"
+  google_fonts: ^2.1.0
+  percent_indicator: ^2.1.7+2
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +37,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -52,14 +48,12 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/icons/
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
